data/derived/fa15/progs/unify/prog1381.ml.out
Characters 133-138:
  | _ when n > 0 -> digitsOfInt r @ digit;;
                                    ^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
